crates/reddb-wire/tests/snapshots/parser_snapshots__cluster_empty_first.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"grpc://,b\")"
---
input: "grpc://,b"
kind:  InvalidUri
error: INVALID_URI: grpc cluster URI has an empty host entry
