crates/reddb-wire/tests/snapshots/parser_snapshots__cluster_empty_middle.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"grpc://primary,,replica\")"
---
input: "grpc://primary,,replica"
kind:  InvalidUri
error: INVALID_URI: grpc cluster URI has an empty host entry
