crates/reddb-wire/tests/snapshots/parser_snapshots__cluster_non_numeric_port.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"grpc://a:nope,b:55055\")"
---
input: "grpc://a:nope,b:55055"
kind:  InvalidUri
error: INVALID_URI: invalid port in cluster URI: a:nope
