crates/reddb-wire/tests/snapshots/parser_snapshots__cluster_only_commas.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"grpc://,,,\")"
---
input: "grpc://,,,"
kind:  InvalidUri
error: INVALID_URI: grpc cluster URI has an empty host entry
