crates/reddb-wire/tests/snapshots/parser_snapshots__dos_too_many_cluster_hosts.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: formatted
---
kind:  LimitExceeded
error: LIMIT_EXCEEDED: max_cluster_hosts exceeded: limit=2 actual=4
