crates/reddb-wire/tests/snapshots/parser_snapshots__dos_too_many_query_params.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: formatted
---
kind:  LimitExceeded
error: LIMIT_EXCEEDED: max_query_params exceeded: limit=2 actual=4
