crates/reddb-wire/tests/snapshots/parser_snapshots__dos_uri_too_long.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: formatted
---
kind:  LimitExceeded
error: LIMIT_EXCEEDED: max_uri_bytes exceeded: limit=16 actual=30
