crates/reddb-wire/tests/snapshots/parser_snapshots__empty_input.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"\")"
---
input: ""
kind:  Empty
error: EMPTY: empty connection string
